# upnp-browse

./: README.md  autogen.sh  configure.ac  meson.build
src/: Makefile.am  browse-command.vala  browse-path.vala  browse.vala  cd-command.vala  command.vala  connect-command.vala  content-directory.vala  disconnect-command.vala  info-command.vala  list-command.vala  meson.build  search-command.vala  upnp-device-lister.vala
