executable('upnp-browse',
           ['browse-command.vala',
            'browse-path.vala',
            'browse.vala',
            'cd-command.vala',
            'command.vala',
            'connect-command.vala',
            'content-directory.vala',
            'disconnect-command.vala',
            'info-command.vala',
            'list-command.vala',
            'search-command.vala',
            'upnp-device-lister.vala'],
           dependencies: [readline, gobject, ssdp, upnp, upnp_av],
           vala_args : ['--pkg', 'readline'])
